# kuehmayer_project_2

./: .gitignore  CHANGELOG.org  README.md  input_example.txt  json_example.json  meson.build  meson_options.txt  toml_example.toml
doc/: main.tex
doc/kuehmayer_project_2/: Client.tex  Client_file_input.tex  Client_send_Message.tex  Einleitung.tex  Integration_Tests.tex  Message_utilitys.tex  Object-Storage.tex  Parameter.tex  Programm.tex  Proto-Message.tex  RMI.tex  RMI_Bedienung.tex  RMI_Theorie.tex  RMI_Umsetzung.tex  Server.tex  Unit_Tests.tex  literatur.bib  main.tex
include/: car.h  car_builder.h  car_calculator.h  config.h  leasing_calculation.h  message_utility.h  pystring.h
include/client/: client_grpc.h  repl.h
include/server/: object_storage.h  server_grpc.h
integration_tests/: main_int_tests.cpp  repl_int_tests.cpp
src/: car.cpp  car_builder.cpp  car_calculator.cpp  config.cpp  leasing_calculation.cpp  message_utility.cpp  pystring.cpp
src/client/: c_main.cpp  client_grpc.cpp  repl.cpp  repl_constructor.cpp  repl_functions.cpp
src/messages/: calculator.proto  car.proto  grpc_message.proto  message.proto
src/server/: object_storage.cpp  s_main.cpp  server_grpc.cpp
tests/: leasing_calculation_tests.cpp  main_tests.cpp  repl_tests.cpp
unit_tests/: car_calculator_test.cpp  car_tests.cpp  main_tests.cpp  message_utility_test.cpp  repl_tests.cpp
