option('asio_include_dir', type : 'string', value : '/mnt/Storage/NVSprojekt/includes/asio-master/', description : 'the include dir of asio')
option('doctest_include_dir', type : 'string', value : '/mnt/Storage/NVSprojekt/includes/', description : 'the include dir of doctest')
option('cli11_include_dir', type : 'string', value : '/mnt/Storage/NVSprojekt/includes/', description : 'the dir containing CLI11.hpp')
option('peglib_include_dir', type : 'string', value : '/mnt/Storage/NVSprojekt/includes/', description : 'the dir containing peglib.h')
option('fmt_include_dir', type : 'string', value : '/mnt/Storage/NVSprojekt/includes/fmt-master/', description : 'the include dir of fmt')
option('json_include_dir', type : 'string', value : '/mnt/Storage/NVSprojekt/includes/', description : 'the include dir of json')
option('magic_enum_include_dir', type : 'string', value : '/mnt/Storage/NVSProjekt/includes/', description : 'the dir containing magic_enum.hpp')
option('rang_include_dir', type : 'string', value : '/mnt/Storage/NVSprojekt/includes/', description : 'the dir containing rang.hpp')
option('spdlog_include_dir', type : 'string', value : '/mnt/Storage/NVSprojekt/includes/', description : 'the include dir of spdlog')
option('toml_include_dir', type : 'string', value : '/mnt/Storage/NVSprojekt/includes/', description : 'the include dir of toml++')
